Simplify rabbit step message creation